traefik-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.home.aramiske.au`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.home.aramiske.au`) && Headers(`Content-Type`, `application/grpc`)
      priority: 12
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-test
  namespace: app-test
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app-test.home.aramiske.au`)
      priority: 11
      services:
        - name: app-test-svc
          port: 80
    - kind: Rule
      match: Host(`app-test.home.aramiske.au`) && Headers(`Content-Type`, `application/grpc`)
      priority: 13
      services:
        - name: app-test-svc
          port:
          scheme: h2c
  tls:
    secretName: app-test-tls-secret
